# editorial_scripts

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .precommit-security.yaml  .secrets.baseline  .semgrepignore  .trivyignore  ACTUAL_INCREMENTAL_PROGRESS.md  AGGRESSIVE_DEDUPLICATION_PLAN.md  API_IMPLEMENTATION_REPORT.md  BRUTAL_REALITY_CHECK_2.md  CLAUDE.md  CLEANUP_COMPLETE_REPORT.md  CLEAN_MOR_EXTRACTION_20250819_115149.json  COMPLETE_EXTRACTION_SPECIFICATION.md  COMPLETE_EXTRACTOR_STATUS.md  COMPREHENSIVE_AUDIT_20251004.md  COMPREHENSIVE_AUDIT_JULY_14_2025.md  COMPREHENSIVE_AUDIT_REPORT.md  CONNECTION_POOL_OPTIMIZATION_COMPLETE.md  CONTRIBUTING.md  CORRECTED_SICON_BASELINE.md  DOCUMENTATION_CLEANUP_2025_09_14.md  Dockerfile  FINAL_AUDIT_REPORT.md  FINAL_COMPREHENSIVE_AUDIT.md  FINAL_REPORT.md  FIXES_IMPLEMENTED_SUMMARY.md  FIXES_NEEDED.md  FS_ENHANCEMENT_PLAN.md  FULL_AUDIT_JULY_15_2025.md  HONEST_AUDIT.md  IMPLEMENTATION_PLAN_20251004.md  JOURNAL_SPECIFICATIONS_COMPREHENSIVE.md  LICENSE  MOR_EXTRACTION_DEMO_RESULTS.md  Makefile  PARANOID_TEST_REPORT.md  PROJECT_STATE_CURRENT.md  (+161 more)
.github/: pull_request_template.md
.security/: bandit-allowlist.txt  pip-audit-allowlist.txt
.session_state/: current_session.json  step_174600_summary.md  step_190120_summary.md  step_191711_summary.md  step_195438_summary.md  step_200902_summary.md  step_201014_summary.md  step_201122_summary.md  step_201322_summary.md  step_201607_summary.md  step_201805_summary.md  step_201911_summary.md  step_202014_summary.md  step_202433_summary.md  step_203956_summary.md  step_204002_summary.md  step_204008_summary.md  step_204147_summary.md  step_204638_summary.md  step_204644_summary.md  step_204650_summary.md  step_205008_summary.md
.venv_new/: pyvenv.cfg
alembic/: env.py
analytics/: __init__.py
archive/: README.md
backups/: accept_cookies.py.backup  jota_enhanced.py.backup  mafe.py.backup  mafe_hybrid.py.backup  mf.py.backup
config/: README.md  baseline_targets_july_15_2025.yaml  corrected_journals.yaml  credentials.yaml.example  gmail_config.json  gmail_config.json.example  journals.yaml  journals_config.json  prometheus.yml  settings.yaml
core/: ai_manuscript_analyzer.py  base.py  connection_debugger.py  credential_manager.py  digest_utils.py  enhanced_base.py  enhanced_journal_scrapers.py  generic_email_utils.py  paper_downloader.py
database/: README.md  __init__.py  alembic.ini  referee_db.py  sample_data.py  schema.sql  setup_database.py  setup_simple.py
dev/: README.md  test_all_extractors_live.py  test_mf_enhancements.py  test_mf_navigation.py  test_mf_production.py  test_mf_referee_emails.py  test_mor_status.py  validate_outputs.py  wiley_scienceconnect_analysis.md
docs/: CRITICAL_FINDING.md  ECC_PROGRESS_SUMMARY.md  EXTRACTION_METHODS_CATALOG.md  EXTRACTOR_REFERENCE.md  FINAL_STATUS_SUMMARY.md  GENERAL_AUDIENCE_OVERVIEW.md  GMAIL_OAUTH_SETUP.md  GRADUAL_MYPY_PLAN.md  HISTORY_PURGE_INSTRUCTIONS.md  LEGACY_ANALYSIS.md  MOR_EXTRACTION_CAPABILITIES.md  MOR_EXTRACTOR_AUDIT.md  PROJECT_STATUS.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_EXECUTIVE_SUMMARY.md  REFACTORING_PLAN_2025.md  REFACTORING_PROGRESS.md  REFEREE_ANALYTICS_STATUS.md  SICON_EXTRACTION_WORKFLOW.md  SYSTEM_FIXES_COMPLETE.md  TROUBLESHOOTING.md  ULTRATHINK_ECC_ANALYSIS.md  ULTRATHINK_PROGRESS.md  ULTRATHINK_REFACTORING_PLAN.md  sicon_fix_summary.md
editorial_assistant/: __init__.py
editorial_scripts_ultimate/: README.md
final_implementation/: .env.example  README.md  __init__.py  main.py  requirements.txt
journals/: accept_cookies.py  base_journal.py  fs.py  mor.py  siam_base.py  sifin.py
legacy_20250710_165846/: ARCHIVE_MANIFEST.txt  FINAL_COMPLETION_REPORT.md  MF_MOR_DIGEST.md  REFACTORING_PLAN.md  checkbox_click_extractor.py  complete_referee_extractor.py  complete_robust_extractor.py  complete_stable_mf_extractor.py  complete_stable_mor_extractor.py  comprehensive_mf_mor_scraper.py  debug_mf_mor_extractor.py  deep_debug_referee_extractor.py  dynamic_comprehensive_scraper.py  enhanced_pdf_extractor.py  final_headless_extractor.py  final_referee_extractor.py  final_working_referee_extractor.py  foolproof_extractor.py  generic_referee_extractor.py  integrated_pdf_extractor.py  main.py  main_enhanced.py  mf_direct_nav_scraper.py  mf_final_scraper.py  mf_final_working_scraper.py  mf_mor_comprehensive_scraper.py  mf_mor_correct_scraper.py  mf_mor_final_scraper.py  mf_mor_popup_scraper.py  mf_mor_take_action_scraper.py  mf_working_scraper.py  peer_review_reports_extractor.py  perfect_journal_extractor.py  production_journal_scraper.py  robust_mf_mor_extractor.py  screenshot_debug_extractor.py  simple_referee_extractor.py  stable_mf_extractor.py  stable_mor_extractor.py  test_ai_integration.py  (+24 more)
migration_output/: migration_report.json  run_parallel_test.py
migrations/: env.py
pdf_debug_20250711_081153/: debug_log.txt
pdf_debug_20250711_081309/: debug_log.txt
production/: .env.example  EXTRACTION_SPECS_AUDIT.md  GMAIL_CROSSCHECK_IMPLEMENTATION.md  MF_COMPLETE_EXTRACTION_SUMMARY.md  MF_REVIEW_EXTRACTION_ENHANCEMENTS.md  README.md  SESSION_STATUS_20250728.md  __init__.py  main.py  mf_timeline_report_20250728_212527.txt  requirements.txt  test_extraction.py
scripts/: activate_fresh.sh  bootstrap_vault_secrets.py  check_wiley_prereqs.py  clean_environment.sh  dashboard_server.py  generate_dashboard.py  init_db.sql  run_api.sh  run_mf_wiley_attached.sh  send_digest.py  setup_gmail_oauth.py  weekly_run.sh
sifin_real_test_20250711_140012/: error.txt
sifin_real_test_20250711_140738/: extraction_summary.json  raw_results.json
tests/: conftest.py  simple_sicon_test.py  test_action_items.py  test_adapter_details_stub.py  test_ae_report.py  test_all_extractors.py  test_annual_report.py  test_api_audit_summary.py  test_api_basic.py  test_architecture_validation.py  test_attachment_classification.py  test_audit_normalization.py  test_baseline_validation.py  test_browser_manager.py  test_cache_manager.py  test_category_selectors.py  test_celery_config.py  test_celery_task_status.py  (+66 more)
(+1595 files in other folders)
