[tool.poetry]
name = "editorial-scripts"
version = "2.0.0"
description = "Journal manuscript extraction and referee recommendation system"
authors = ["Dylan Possamaï <dylan.possamai@math.ethz.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Browser automation
selenium = "^4.16.0"
webdriver-manager = "^4.0.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.0.0"

# Google API
google-api-python-client = "^2.141.0"
google-auth = "^2.35.0"
google-auth-oauthlib = "^1.2.1"

# HTTP and data
requests = "^2.31.0"
python-dateutil = "^2.8.0"
numpy = "^1.26.3"

# ML pipeline
scikit-learn = "^1.4.0"
joblib = "^1.3.0"
faiss-cpu = "^1.7.0"
sentence-transformers = "^2.2.0"

# Optional
undetected-chromedriver = "^3.5.0"
anthropic = "^0.39.0"
PyMuPDF = ">=1.24"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
ruff = "^0.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
bandit = "^1.7.0"
pip-audit = "^2.7.0"
detect-secrets = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["production/src", "."]
addopts = [
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
explicit_package_bases = true
namespace_packages = true
files = ["production/src/pipeline"]

[[tool.mypy.overrides]]
module = [
    "bs4.*",
    "selenium.*",
    "webdriver_manager.*",
    "googleapiclient.*",
    "google_auth_oauthlib.*",
    "google.oauth2.*",
    "google.auth.*",
    "faiss.*",
    "sentence_transformers.*",
    "anthropic.*",
    "sklearn.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  "archive",
  "dev",
  "docs",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "UP007", # Optional[X] → X | None — too noisy in large extractors
    "UP038", # isinstance(x, (A, B)) → isinstance(x, A | B) — cosmetic
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["F401", "F811"]
"production/src/core/*_base.py" = ["E402", "E731", "E741", "B023"]
"production/src/core/em_base.py" = ["E402", "E731", "B023"]
"production/src/core/academic_apis.py" = ["E731"]
"production/src/extractors/*.py" = ["E402", "E731", "E741", "E712", "B023", "B904", "C401"]
